--- a/_locales/nb/messages.json
+++ b/_locales/nb/messages.json
@@ -1,4 +1,8 @@
 {
+  "description":{
+    "message":"Den mest populære Chrome utvidelsen med over 40 millioner brukere! Blokkerer annonser over hele internett.",
+    "description":"Extension description in manifest. Should not exceed 132 characters."
+  },
   "description2":{
     "message":"Den mest populære Chrome utvidelsen med over 40 millioner brukere! Blokkerer annonser over hele internett.",
     "description":"Extension description in manifest. Should not exceed 132 characters."
@@ -31,10 +35,6 @@
     "message":"AdBlock-innstillinger",
     "description":"Title for the options page"
   },
-  "chromebutton_how_to_hide2":{
-    "message":"For å skjule knappen, høyreklikk og velg Skjul knappen. Du kan vise den igjen ved å skrive chrome:\/\/extensions\/ i adresselinjen.",
-    "description":"Message explaining how to hide the AdBlock toolbar button. 'Hide Button' should match the text that Chrome displays when you right click a toolbar button."
-  },
   "operabutton_how_to_hide2":{
     "message":"For å fjerne knappen, gå til opera:\/\/extensions og sett en markering i boksen ved menylinjen \"Skjul fra verktøylinjen\" . For å vise knappen igjen må markeringen du satte ved menylinjen fjernes .",
     "description":"Message explaining how to hide the AdBlock toolbar button. 'Hide Button' should match the text that Opera displays on the Extensions page."
@@ -42,10 +42,6 @@
   "safaributton_how_to_hide2":{
     "message":"For å gjemme knappen, høyreklikk på Safaris verktøylinje og velg tilpass verktøylinje. Deretter dra AdBlockknappen ut av verktøylinjen. Du kan vise den igjen ved å dra den tilbake til verktøylinjen",
     "description":"Message explaining how to hide the AdBlock toolbar button. 'Customize Toolbar' should match the text that Safari displays in the toolbar's context menu."
-  },
-  "ff_button_how_to_hide":{
-    "message":"For å skjule knappen, høyreklikk og velg Fjern fra verktøylinje. Du kan vise den igjen ved å åpne menyen og velge Tilpass.",
-    "description":"Message explaining how to hide the AdBlock toolbar button. 'Remove from Toolbar' should match the text that Firefox displays when you right click a toolbar button, and 'Customize' should match the text that shows when you click the button on the Firefox toolbar with three lines."
   },
   "sliderexplanation":{
     "message":"Drag glidebryteren helt til annonsen(e) er blokkert riktig på nettsiden, og det blokkerte elementet ser brukbart ut.",
@@ -353,22 +349,6 @@
   },
   "filterantisocial":{
     "message":"Antisosial filterliste (tar bort knapper for sosiale media)",
-    "description":"Name of the filter list"
-  },
-  "filterannoyances":{
-    "message":"Fanboy's Annoyances (fjerner irritasjonsmomenter på nettet)",
-    "description":"Name of the filter list"
-  },
-  "filterwarning_removal":{
-    "message":"AdBlock-advarselliste (fjerner advarsler om at du bruker AdBlock)",
-    "description":"Name of the filter list"
-  },
-  "filteradblock_custom":{
-    "message":"AdBlock-tilpassede filtre",
-    "description":"A filter list"
-  },
-  "filtereasylist":{
-    "message":"EasyList",
     "description":"A filter list"
   },
   "filterrussian":{
@@ -377,7 +357,7 @@
   },
   "filterczech":{
     "message":"Tsjekkisk og slovakisk",
-    "description":"Language names for a filter list"
+    "description":"A filter list"
   },
   "filtereasyprivacy":{
     "message":"EasyPrivacy (beskyttelse av privatliv)",
@@ -515,10 +495,6 @@
     "message":"Nei",
     "description":"A negative response to a question"
   },
-  "disableforchromestepone":{
-    "message":"Åpne <a href='#'>utvidelser<\/a>",
-    "description":"Step 1 for disabling Chrome extensions"
-  },
   "clickdisableotherextensions":{
     "message":"<b>ELLER<\/b> så kan du bare klikke på denne knappen, så fikser vi alt: <a>Deaktiver alle andre utvidelser<\/a>",
     "description":"On the ad report page, an alternative way to disable other extensions"
@@ -545,87 +521,167 @@
   },
   "lang_english":{
     "message":"Engelsk",
-    "description":"language"
-  },
-  "filtereasylist_plus_bulgarian":{
-    "message":"Bulgarsk",
-    "description":"language"
-  },
-  "filterchinese":{
-    "message":"Kinesisk",
-    "description":"language"
+    "description":"Language name"
   },
   "lang_czech":{
     "message":"Tsjekkisk",
-    "description":"language"
+    "description":"Language name"
   },
-  "filterdanish":{
-    "message":"Dansk",
-    "description":"language"
-  },
-  "filterdutch":{
-    "message":"Nederlandsk",
-    "description":"language"
-  },
-  "filtereasylist_plus_finnish":{
-    "message":"Finsk",
-    "description":"language"
-  },
-  "filtereasylist_plus_french":{
-    "message":"Fransk",
-    "description":"language"
-  },
-  "filtereasylist_plus_german":{
-    "message":"Tysk",
-    "description":"language"
-  },
-  "filtereasylist_plus_greek":{
-    "message":"Gresk",
-    "description":"language"
-  },
-  "filterhungarian":{
-    "message":"Ungarsk",
-    "description":"language"
-  },
-  "filterisraeli":{
-    "message":"Hebraisk",
-    "description":"language"
-  },
-  "filteritalian":{
-    "message":"Italiensk",
-    "description":"language"
-  },
-  "filterjapanese":{
-    "message":"Japansk",
-    "description":"language"
-  },
-  "filtereasylist_plun_korean":{
-    "message":"Koreansk",
-    "description":"language"
-  },
-  "filtereasylist_plus_polish":{
-    "message":"Polsk",
-    "description":"language"
-  },
-  "filtereasylist_plus_romanian":{
-    "message":"Rumensk",
-    "description":"language"
+  "lang_spanish":{
+    "message":"Spansk",
+    "description":"Language name"
   },
   "lang_russian":{
     "message":"Russisk",
-    "description":"language"
+    "description":"Language name"
   },
   "lang_slovak":{
     "message":"Slovakisk",
-    "description":"language"
-  },
-  "filtereasylist_plus_spanish":{
-    "message":"Spansk",
-    "description":"language"
+    "description":"Language name"
   },
   "lang_ukranian":{
     "message":"Ukrainsk",
-    "description":"language"
+    "description":"Language name"
+  },
+  "lang_bulgarian":{
+    "message":"Bulgarsk",
+    "description":"Language name"
+  },
+  "lang_chinese":{
+    "message":"Kinesisk",
+    "description":"Language name"
+  },
+  "lang_danish":{
+    "message":"Dansk",
+    "description":"Language name"
+  },
+  "lang_dutch":{
+    "message":"Nederlandsk",
+    "description":"Language name"
+  },
+  "lang_finnish":{
+    "message":"Finsk",
+    "description":"Language name"
+  },
+  "lang_french":{
+    "message":"Fransk",
+    "description":"Language name"
+  },
+  "lang_german":{
+    "message":"Tysk",
+    "description":"Language name"
+  },
+  "lang_greek":{
+    "message":"Gresk",
+    "description":"Language name"
+  },
+  "lang_hungarian":{
+    "message":"Ungarsk",
+    "description":"Language name"
+  },
+  "lang_indonesian":{
+    "message":"Indonesisk",
+    "description":"Language name"
+  },
+  "lang_israeli":{
+    "message":"Hebraisk",
+    "description":"Language name"
+  },
+  "lang_italian":{
+    "message":"Italiensk",
+    "description":"Language name"
+  },
+  "lang_japanese":{
+    "message":"Japansk",
+    "description":"Language name"
+  },
+  "lang_korean":{
+    "message":"Koreansk",
+    "description":"Language name"
+  },
+  "lang_polish":{
+    "message":"Polsk",
+    "description":"Language name"
+  },
+  "lang_romanian":{
+    "message":"Rumensk",
+    "description":"Language name"
+  },
+  "lang_latvian":{
+    "message":"Latvisk",
+    "description":"Language name"
+  },
+  "lang_swedish":{
+    "message":"Svensk",
+    "description":"Language name"
+  },
+  "lang_turkish":{
+    "message":"Tyrkisk",
+    "description":"Language name"
+  },
+  "filtereasylist_plus_bulgarian":{
+    "message":"Bulgarsk",
+    "description":"A filter list"
+  },
+  "filterchinese":{
+    "message":"Kinesisk",
+    "description":"A filter list"
+  },
+  "filterdanish":{
+    "message":"Dansk",
+    "description":"A filter list"
+  },
+  "filterdutch":{
+    "message":"Nederlandsk",
+    "description":"A filter list"
+  },
+  "filtereasylist_plus_finnish":{
+    "message":"Finsk",
+    "description":"A filter list"
+  },
+  "filtereasylist_plus_french":{
+    "message":"Fransk",
+    "description":"A filter list"
+  },
+  "filtereasylist_plus_german":{
+    "message":"Tysk",
+    "description":"A filter list"
+  },
+  "filtereasylist_plus_greek":{
+    "message":"Gresk",
+    "description":"A filter list"
+  },
+  "filterhungarian":{
+    "message":"Ungarsk",
+    "description":"A filter list"
+  },
+  "filterisraeli":{
+    "message":"Hebraisk",
+    "description":"A filter list"
+  },
+  "filteritalian":{
+    "message":"Italiensk",
+    "description":"A filter list"
+  },
+  "filterjapanese":{
+    "message":"Japansk",
+    "description":"A filter list"
+  },
+  "filtereasylist_plun_korean":{
+    "message":"Koreansk",
+    "description":"A filter list"
+  },
+  "filtereasylist_plus_polish":{
+    "message":"Polsk",
+    "description":"A filter list"
+  },
+  "filtereasylist_plus_romanian":{
+    "message":"Rumensk",
+    "description":"A filter list"
+  },
+  "filtereasylist_plus_spanish":{
+    "message":"Spansk",
+    "description":"A filter list"
   },
   "other":{
     "message":"Annet",
@@ -691,30 +747,6 @@
     "message":"Vises reklamen også i den nettleseren?",
     "description":"Instruction for how to check Firefox\/Chrome for a reported ad"
   },
-  "ff_checkinchrometitle":{
-    "message":"Sjekk i Chrome",
-    "description":"Tell a user to see if a reported ad also appears in Chrome"
-  },
-  "ff_checkinchrome_1":{
-    "message":"Installer Chrome hvis du ikke har gjort det.",
-    "description":"Instruction for how to check Chrome for a reported ad"
-  },
-  "ff_checkinchrome_2":{
-    "message":"Installer AdBlock for Chrome hvis du ikke har gjort det.",
-    "description":"Instruction for how to check Chrome for a reported ad"
-  },
-  "ff_checkinchrome_3":{
-    "message":"Abonner på samme filterlister i Chrome som du har her.",
-    "description":"Instruction for how to check Chrome for a reported ad"
-  },
-  "ff_checkinchrome_4":{
-    "message":"Last ned siden i Chrome med annonsen.",
-    "description":"Instruction for how to check Chrome for a reported ad"
-  },
-  "ff_checkinchrome_5":{
-    "message":"Kommer annonsen opp i Chrome også?",
-    "description":"Instruction for how to check Chrome for a reported ad"
-  },
   "refusetocheck":{
     "message":"Jeg vil ikke sjekke dette.",
     "description":"User is telling us they don't wish to investigate something for us"
@@ -728,10 +760,6 @@
         "example":"EXAMPLE 1: <a href='mailto:someguy@list.com'>John Doe<\/a>  EXAMPLE 2: <a href='http:\/\/easylist.org'>EasyList forums<\/a>"
       }
     }
-  },
-  "reporttous2":{
-    "message":"Om du kan engelsk kan du rapportere reklamen til oss <a>i feilfølgeren<\/a>.",
-    "description":"NOTE: non-English translations should replace the first sentence and instead say 'If you can speak English, you can report the ad to us <a>in the issue tracker<\/a>.'"
   },
   "fixityourself":{
     "message":"OK, du kan fremdeles blokkere denne reklamen selv, under innstillinger. Takk!",
@@ -829,10 +857,6 @@
     "message":"Beklager, AdBlock er deaktivert på denne siden av en av dine filerlister.",
     "description":"Message shown when a user tries to unwhitelist a web page that has been whitelisted by a rule in a subscribed filter list"
   },
-  "status_disabled":{
-    "message":"AdBlock kan ikke kjøres på dette domenet.",
-    "description":"Message shown in toolbar button on web pages that disallow extensions, such as the Extensions Gallery or about:blank"
-  },
   "dont_run_on_pages_on_domain":{
     "message":"Deaktiver på sider under dette domenet",
     "description":"Menu entry to open the whitelist wizard"
@@ -892,6 +916,10 @@
   "report_ad_on_page":{
     "message":"Rapporter en annonse på denne siden",
     "description":"Entry in the AdBlock button menu"
+  },
+  "acceptableadsoption":{
+    "message":"Tillat visse ikke-påtrengende reklamevisninger",
+    "description":"option on the 'General' tab"
   },
   "advanced_options2":{
     "message":"Jeg er en erfaren bruker, vis meg avanserte innstillinger",
@@ -995,10 +1023,6 @@
       }
     }
   },
-  "dropboxerrorforfilters":{
-    "message":"Du har overskredet lagringsplassen i din Dropbox. Vennligst fjern noen oppføringer fra dine egendefinerte eller deaktiverte filter, og prøv igjen.",
-    "description":"Message to Dropbox sync users on the Customize tab, custom filters \/ disabled."
-  },
   "languagedropdowndescription":{
     "message":"Legg til filter for et annet språk: ",
     "description":"Dropdown list for language-specific filters"
@@ -1010,10 +1034,6 @@
   "selectlanguage":{
     "message":" --Velg språk-- ",
     "description":"Text for the first option in Langage Dropdown for Filter Lists tab in options. Include the ' -- ' on either side of your translation."
-  },
-  "allow_whitelisting_youtube_channels":{
-    "message":"Ikke blokker annonser på bestemte YouTube-kanaler",
-    "description":"Checkbox on the 'General' tab of the Options page"
   },
   "whitelist_youtube_channel":{
     "message":"Hvitelist kanalen $name$",
@@ -1056,10 +1076,6 @@
         "example":"<a>here<\/a>"
       }
     }
-  },
-  "ff_adblock_outdated":{
-    "message":"Du bruker en gammel versjon av Ad-Block. Vennligst klikk på Firefox menyknappen og velg utvidelser. Deretter på utvidelser-siden, trykk på girikonet (verktøyet for alle utvidelser), og velg 'se etter oppdateringer'.\n\n",
-    "description":"On the Options > Support page, shows when there is an update available for AdBlock. 'Add-ons', 'Tools for all add-ons' and 'Check for Updates' should match the strings displayed by Firefox."
   },
   "adblocksupport":{
     "message":"AdBlock Støtte",
@@ -1113,10 +1129,6 @@
     "message":"Har vårt team etterspurt feilsøkingsinfo? Klikk <a href='#' id='debug'>her<\/a>for det!",
     "description":"Users can click this link to provide debug information to AdBlock staff"
   },
-  "bugreport":{
-    "message":"Hvorfor ikke sende oss en <a>feilrapport<\/a>?",
-    "description":"Link to send a bug report on the Support tab of the options"
-  },
   "supportsite":{
     "message":"La oss få vite det på vår <a>støtteside<\/a>!",
     "description":"Link to the support site on the Support tab of the options"
@@ -1124,5 +1136,17 @@
   "ad_report_please":{
     "message":"Hvis du ser en annonse, ikke send en feilrapport. Send en <a>annonserapport<\/a> i stedet!",
     "description":"Link to the ad report page on our support site. This is found on the Support tab of the options."
+  },
+  "headertype":{
+    "message":"Type",
+    "description":"Resource list page: title of a column"
+  },
+  "typesub_frame":{
+    "message":"ramme",
+    "description":"A resource type"
+  },
+  "typemain_frame":{
+    "message":"side",
+    "description":"A resource type"
   }
 }
