--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,15 @@
 
 UNRELEASED:
 
+3.8.0:
+- Updated translations.
+- Fixed an issue with passing of custom filters to our support site on the 'Report an Ad' page, and the 'Report a Bug' page. (# 198)
+- Added rich notifications as a user survey type. (# 195)
+
+
+3.7.0:
+- Updated translations.
+
 3.6.0:
 - Changed the 'Spread the word' link on the AdBlock menu to 'Donate to help support AdBlock!', and added message logging when the AdBlock popup menu is opened. (#190)
 - Updated Translations.
