--- a/_locales/gu/messages.json
+++ b/_locales/gu/messages.json
@@ -1,4 +1,8 @@
 {
+  "description":{
+    "message":"40 મિલિયન વપરાશકર્તાઓ સાથે સૌથી લોકપ્રિય, Chrome એક્સ્ટેન્શન! બધી વેબ સાઇટ​ પર જાહેરાતો બ્લોકો કરો.",
+    "description":"Extension description in manifest. Should not exceed 132 characters."
+  },
   "description2":{
     "message":"40 મિલિયન વપરાશકર્તાઓ સાથે સૌથી લોકપ્રિય, Chrome એક્સ્ટેન્શન! બધી વેબ સાઇટ​ પર જાહેરાતો બ્લોકો કરો.",
     "description":"Extension description in manifest. Should not exceed 132 characters."
@@ -31,10 +35,6 @@
     "message":"AdBlock ના વિકલ્પો",
     "description":"Title for the options page"
   },
-  "chromebutton_how_to_hide2":{
-    "message":"આ બટન છુપાવવા માટે, તેને અધિકાર ક્લિક કરો અને છુપાવો બટન પસંદ કરો. તમે હેઠળ તે ફરીથી બતાવી શકે છે chrome:\/\/chrome\/extensions.",
-    "description":"Message explaining how to hide the AdBlock toolbar button. 'Hide Button' should match the text that Chrome displays when you right click a toolbar button."
-  },
   "operabutton_how_to_hide2":{
     "message":"આ બટન છુપાવવા માટે, આ લિંક પર જાઓ opera:\/\/extensions અને તપાસો 'ટૂલબાર છુપાવ્યા' વિકલ્પ પસંદ કરો. તમે તે વિકલ્પ ચકાસ્યા વગર તેને ફરીથી બતાવી શકો છો.",
     "description":"Message explaining how to hide the AdBlock toolbar button. 'Hide Button' should match the text that Opera displays on the Extensions page."
@@ -42,10 +42,6 @@
   "safaributton_how_to_hide2":{
     "message":"આ બટન છુપાવવા માટે,Safari ની ટૂલબાર પર જમણી ક્લિક કરો અને કસ્ટમાઇઝ ટૂલબાર પસંદ કરો,પછી AdBlock ના બટનને ટૂલબાર બહાર  ખેંચો.તમે ટૂલબાર પાછું ખેંચીને તેને ફરીથી બતાવી શકો છો.",
     "description":"Message explaining how to hide the AdBlock toolbar button. 'Customize Toolbar' should match the text that Safari displays in the toolbar's context menu."
-  },
-  "ff_button_how_to_hide":{
-    "message":"આ બટન છુપાવવા માટે, જમણી ક્લિક કરો અને રીમુવ​ ટૂલબાર પસંદ કરો.તમને FireFox મેનુ હેઠળ તેને ફરીથી બતાવશે તેના મટે મેનુ માં જાઓ પછી કસ્ટમાઇઝ કરો.",
-    "description":"Message explaining how to hide the AdBlock toolbar button. 'Remove from Toolbar' should match the text that Firefox displays when you right click a toolbar button, and 'Customize' should match the text that shows when you click the button on the Firefox toolbar with three lines."
   },
   "sliderexplanation":{
     "message":"આ જાહેરાત આ પૃષ્ઠ પર યોગ્ય રીતે અવરોધિત છે, ત્યાં સુધી આ બદલવા માટે સ્લાઇડર સ્લાઇડ કરો,અને અવરોધિત તત્વ ઉપયોગી લાગે શકે તેવ હોય તો.",
@@ -353,22 +349,6 @@
   },
   "filterantisocial":{
     "message":"Anticocial ફિલ્ટર યાદી(સામાજિક મીડિયા બટનો દૂર કરે)",
-    "description":"Name of the filter list"
-  },
-  "filterannoyances":{
-    "message":"Fanboy's Annoyances (વેબ પર ત્રાસ દૂર કરે છે)",
-    "description":"Name of the filter list"
-  },
-  "filterwarning_removal":{
-    "message":"AdBlock ચેતવણી યાદી દૂર કરો (ઉપયોગ વિશે સંદેશાઓ દૂર કરે AdBlock)",
-    "description":"Name of the filter list"
-  },
-  "filteradblock_custom":{
-    "message":"AdBlock વૈવિધ્યપૂર્ણ ગાળકો (ભલામણ)",
-    "description":"A filter list"
-  },
-  "filtereasylist":{
-    "message":"EasyList",
     "description":"A filter list"
   },
   "filterrussian":{
@@ -377,7 +357,7 @@
   },
   "filterczech":{
     "message":"ઝેક અને સ્લોવેક",
-    "description":"Language names for a filter list"
+    "description":"A filter list"
   },
   "filtereasyprivacy":{
     "message":"EasyPrivacy (ગોપનીયતા રક્ષણ)",
@@ -515,10 +495,6 @@
     "message":"ના",
     "description":"A negative response to a question"
   },
-  "disableforchromestepone":{
-    "message":"<a href='#'>એકસટેન્શન પૃષ્ઠ<\/a> ખોલો",
-    "description":"Step 1 for disabling Chrome extensions"
-  },
   "disableforchromeandsafaristeptwo":{
     "message":"'Enabled checkbox' ને અનચેક કરો AdBlock ની સિવાય દરેક વિસ્તરણ માટે <b>આગામી<\/b> થશે.\n<b>AdBlock ને સક્રિય કરો<\/b>.",
     "description":"Step 2 for disabling Chrome and Safari extensions"
@@ -533,87 +509,167 @@
   },
   "lang_english":{
     "message":"ઇંગલિશ",
-    "description":"language"
-  },
-  "filtereasylist_plus_bulgarian":{
-    "message":"બલ્ગેરિયન",
-    "description":"language"
-  },
-  "filterchinese":{
-    "message":"ચિની",
-    "description":"language"
+    "description":"Language name"
   },
   "lang_czech":{
     "message":"ઝેક",
-    "description":"language"
+    "description":"Language name"
   },
-  "filterdanish":{
-    "message":"ડેનિશ",
-    "description":"language"
-  },
-  "filterdutch":{
-    "message":"ડચ",
-    "description":"language"
-  },
-  "filtereasylist_plus_finnish":{
-    "message":"ફિનિશ",
-    "description":"language"
-  },
-  "filtereasylist_plus_french":{
-    "message":"ફ્રેન્ચ",
-    "description":"language"
-  },
-  "filtereasylist_plus_german":{
-    "message":"જર્મન",
-    "description":"language"
-  },
-  "filtereasylist_plus_greek":{
-    "message":"ગ્રીક",
-    "description":"language"
-  },
-  "filterhungarian":{
-    "message":"હંગેરિયન",
-    "description":"language"
-  },
-  "filterisraeli":{
-    "message":"હિબ્રુ",
-    "description":"language"
-  },
-  "filteritalian":{
-    "message":"ઇટાલિયન",
-    "description":"language"
-  },
-  "filterjapanese":{
-    "message":"Japanese",
-    "description":"language"
-  },
-  "filtereasylist_plun_korean":{
-    "message":"કોરિયન",
-    "description":"language"
-  },
-  "filtereasylist_plus_polish":{
-    "message":"પોલિશ",
-    "description":"language"
-  },
-  "filtereasylist_plus_romanian":{
-    "message":"રોમાનિયન",
-    "description":"language"
+  "lang_spanish":{
+    "message":"સ્પેનિશ",
+    "description":"Language name"
   },
   "lang_russian":{
     "message":"રશિયન",
-    "description":"language"
+    "description":"Language name"
   },
   "lang_slovak":{
     "message":"સ્લોવેક",
-    "description":"language"
-  },
-  "filtereasylist_plus_spanish":{
-    "message":"સ્પેનિશ",
-    "description":"language"
+    "description":"Language name"
   },
   "lang_ukranian":{
     "message":"યુક્રેનિયન",
-    "description":"language"
+    "description":"Language name"
+  },
+  "lang_bulgarian":{
+    "message":"બલ્ગેરિયન",
+    "description":"Language name"
+  },
+  "lang_chinese":{
+    "message":"ચિની",
+    "description":"Language name"
+  },
+  "lang_danish":{
+    "message":"ડેનિશ",
+    "description":"Language name"
+  },
+  "lang_dutch":{
+    "message":"ડચ",
+    "description":"Language name"
+  },
+  "lang_finnish":{
+    "message":"ફિનિશ",
+    "description":"Language name"
+  },
+  "lang_french":{
+    "message":"ફ્રેન્ચ",
+    "description":"Language name"
+  },
+  "lang_german":{
+    "message":"જર્મન",
+    "description":"Language name"
+  },
+  "lang_greek":{
+    "message":"ગ્રીક",
+    "description":"Language name"
+  },
+  "lang_hungarian":{
+    "message":"હંગેરિયન",
+    "description":"Language name"
+  },
+  "lang_indonesian":{
+    "message":"ઇન્ડોનેશિયન",
+    "description":"Language name"
+  },
+  "lang_israeli":{
+    "message":"હિબ્રુ",
+    "description":"Language name"
+  },
+  "lang_italian":{
+    "message":"ઇટાલિયન",
+    "description":"Language name"
+  },
+  "lang_japanese":{
+    "message":"Japanese",
+    "description":"Language name"
+  },
+  "lang_korean":{
+    "message":"કોરિયન",
+    "description":"Language name"
+  },
+  "lang_polish":{
+    "message":"પોલિશ",
+    "description":"Language name"
+  },
+  "lang_romanian":{
+    "message":"રોમાનિયન",
+    "description":"Language name"
+  },
+  "lang_latvian":{
+    "message":"લાતવિયન",
+    "description":"Language name"
+  },
+  "lang_swedish":{
+    "message":"સ્વિડીશ",
+    "description":"Language name"
+  },
+  "lang_turkish":{
+    "message":"ટર્કિશ",
+    "description":"Language name"
+  },
+  "filtereasylist_plus_bulgarian":{
+    "message":"બલ્ગેરિયન",
+    "description":"A filter list"
+  },
+  "filterchinese":{
+    "message":"ચિની",
+    "description":"A filter list"
+  },
+  "filterdanish":{
+    "message":"ડેનિશ",
+    "description":"A filter list"
+  },
+  "filterdutch":{
+    "message":"ડચ",
+    "description":"A filter list"
+  },
+  "filtereasylist_plus_finnish":{
+    "message":"ફિનિશ",
+    "description":"A filter list"
+  },
+  "filtereasylist_plus_french":{
+    "message":"ફ્રેન્ચ",
+    "description":"A filter list"
+  },
+  "filtereasylist_plus_german":{
+    "message":"જર્મન",
+    "description":"A filter list"
+  },
+  "filtereasylist_plus_greek":{
+    "message":"ગ્રીક",
+    "description":"A filter list"
+  },
+  "filterhungarian":{
+    "message":"હંગેરિયન",
+    "description":"A filter list"
+  },
+  "filterisraeli":{
+    "message":"હિબ્રુ",
+    "description":"A filter list"
+  },
+  "filteritalian":{
+    "message":"ઇટાલિયન",
+    "description":"A filter list"
+  },
+  "filterjapanese":{
+    "message":"Japanese",
+    "description":"A filter list"
+  },
+  "filtereasylist_plun_korean":{
+    "message":"કોરિયન",
+    "description":"A filter list"
+  },
+  "filtereasylist_plus_polish":{
+    "message":"પોલિશ",
+    "description":"A filter list"
+  },
+  "filtereasylist_plus_romanian":{
+    "message":"રોમાનિયન",
+    "description":"A filter list"
+  },
+  "filtereasylist_plus_spanish":{
+    "message":"સ્પેનિશ",
+    "description":"A filter list"
   },
   "other":{
     "message":"અન્ય",
@@ -675,30 +731,6 @@
     "message":"આ જાહેરાત બ્રાઉઝરમાં બહુ દેખાય છે?",
     "description":"Instruction for how to check Firefox\/Chrome for a reported ad"
   },
-  "ff_checkinchrometitle":{
-    "message":"Chrome માં ચેક કરે છે",
-    "description":"Tell a user to see if a reported ad also appears in Chrome"
-  },
-  "ff_checkinchrome_1":{
-    "message":"જો તમારી પાસે Chrome ના હોય, તો ઇન્સ્ટોલ કરો.",
-    "description":"Instruction for how to check Chrome for a reported ad"
-  },
-  "ff_checkinchrome_2":{
-    "message":"તેને ન હોય તો, Chrome માટે    AdBlock ની સ્થાપિત કરો.",
-    "description":"Instruction for how to check Chrome for a reported ad"
-  },
-  "ff_checkinchrome_3":{
-    "message":"Chrome માં, તમે અહીં છે જેવા જ ફિલ્ટર યાદીઓ પર સબ્સ્ક્રાઇબ કરી શકો છો.",
-    "description":"Instruction for how to check Chrome for a reported ad"
-  },
-  "ff_checkinchrome_4":{
-    "message":"Chrome માં, એડ સાથે ઓપેન થવા ડો.",
-    "description":"Instruction for how to check Chrome for a reported ad"
-  },
-  "ff_checkinchrome_5":{
-    "message":"આ જાહેરાત ખૂબ Chrome દેખાય છે?",
-    "description":"Instruction for how to check Chrome for a reported ad"
-  },
   "refusetocheck":{
     "message":"હું આ ચકાસવા માટે નથી માંગતો",
     "description":"User is telling us they don't wish to investigate something for us"
@@ -712,10 +744,6 @@
         "example":"EXAMPLE 1: <a href='mailto:someguy@list.com'>John Doe<\/a>  EXAMPLE 2: <a href='http:\/\/easylist.org'>EasyList forums<\/a>"
       }
     }
-  },
-  "reporttous2":{
-    "message":"આ જાહેરાત ના <a>ટ્રેકર મુદ્દે તમે અમને જાણ<\/a> કરી શકો છો.",
-    "description":"NOTE: non-English translations should replace the first sentence and instead say 'If you can speak English, you can report the ad to us <a>in the issue tracker<\/a>.'"
   },
   "fixityourself":{
     "message":"ઠીક, તમે હજુ પણ પર તમારા માટે આ જાહેરાત અવરોધિત કરી શકો છો Options page પરથી. આભાર!",
@@ -812,10 +840,6 @@
   "disabled_by_filter_lists":{
     "message":"માફ કરશો, AdBlock ની તમારી ફિલ્ટર યાદીઓની એક પછી આ પૃષ્ઠ પર નિષ્ક્રિય થયેલ છે.",
     "description":"Message shown when a user tries to unwhitelist a web page that has been whitelisted by a rule in a subscribed filter list"
-  },
-  "status_disabled":{
-    "message":"AdBlock ની આ ડોમેન પર ચલાવી શકતા નથી.",
-    "description":"Message shown in toolbar button on web pages that disallow extensions, such as the Extensions Gallery or about:blank"
   },
   "dont_run_on_pages_on_domain":{
     "message":"આ ડોમેન પર પૃષ્ઠો પર ચલાવવા નથી",
@@ -965,10 +989,6 @@
     "message":"કસ્ટમ ફિલ્ટર યાદી",
     "description":"List for custom filters the user subscribed to"
   },
-  "dropboxerrorforfilters":{
-    "message":"તમે ડ્રૉપબૉક્સ માપ મર્યાદા વટાવી દીધી છે. તમારી વૈવિધ્યપૂર્ણ અથવા અક્ષમ ફિલ્ટર કેટલાક પ્રવેશોને દૂર કરો અને ફરી પ્રયત્ન કરો.",
-    "description":"Message to Dropbox sync users on the Customize tab, custom filters \/ disabled."
-  },
   "languagedropdowndescription":{
     "message":"અન્ય ભાષા માટે ફિલ્ટર્સ ઉમેરો: ",
     "description":"Dropdown list for language-specific filters"
@@ -980,10 +1000,6 @@
   "selectlanguage":{
     "message":" -- ભાષા પસંદ કરો -- ",
     "description":"Text for the first option in Langage Dropdown for Filter Lists tab in options. Include the ' -- ' on either side of your translation."
-  },
-  "allow_whitelisting_youtube_channels":{
-    "message":"ચોક્કસ YouTube ની ચેનલો વ્હાઇટલિસ્ટિંગ પરવાનગી આપો",
-    "description":"Checkbox on the 'General' tab of the Options page"
   },
   "whitelist_youtube_channel":{
     "message":"વ્હાઇટલિસ્ટ $name$ ચેનલ",
@@ -1026,10 +1042,6 @@
         "example":"<a>here<\/a>"
       }
     }
-  },
-  "ff_adblock_outdated":{
-    "message":"તમે AdBlock ની જૂની આવૃત્તિ વાપરી રહ્યા હોય. Firefox મેનુ બટન પર ક્લિક કરો અને એડ-ઓન્સ પસંદ કરો. પછી ઑન્સ પાનાં પર ઉમેરો, ગિયર ચિહ્ન (બધા એડ ઓન માટે  ના સાધનો) પર ક્લિક કરો, અને 'સુધારાઓ માટે ચકાસો' ને પસંદ કરો.",
-    "description":"On the Options > Support page, shows when there is an update available for AdBlock. 'Add-ons', 'Tools for all add-ons' and 'Check for Updates' should match the strings displayed by Firefox."
   },
   "adblocksupport":{
     "message":"AdBlock નો આધાર",
@@ -1083,10 +1095,6 @@
     "message":"અમારી ટીમ કેટલાક ડિબગ માહિતી માટે વિનંતી કરી છે? તે માટે! <a href='#' id='debug'>અહીં<\/a> જાઓ!",
     "description":"Users can click this link to provide debug information to AdBlock staff"
   },
-  "bugreport":{
-    "message":"શા માટે તમે અમને <a>ક્ષતિ અહેવાલ<\/a> મોકલ્યા નથી?",
-    "description":"Link to send a bug report on the Support tab of the options"
-  },
   "supportsite":{
     "message":"અમને અમારી <a>સપોર્ટ સાઇટ<\/a> પર જણાવો!",
     "description":"Link to the support site on the Support tab of the options"
@@ -1094,5 +1102,17 @@
   "ad_report_please":{
     "message":"તમને એક જાહેરાત જોઈ રહ્યાં છો, તો ક્ષતિ અહેવાલ બનાવા ની જરૂર નથી<a>જાહેરાત રિપોર્ટ<\/a>!",
     "description":"Link to the ad report page on our support site. This is found on the Support tab of the options."
+  },
+  "headertype":{
+    "message":"પ્રકાર",
+    "description":"Resource list page: title of a column"
+  },
+  "typesub_frame":{
+    "message":"ફ્રેમ",
+    "description":"A resource type"
+  },
+  "typemain_frame":{
+    "message":"પાનું",
+    "description":"A resource type"
   }
 }
