--- a/_locales/id/messages.json
+++ b/_locales/id/messages.json
@@ -1,4 +1,8 @@
 {
+  "description":{
+    "message":"Ekstensi Chrome paling populer, dengan lebih dari 40 juta pengguna! Blokir iklan di seluruh web.",
+    "description":"Extension description in manifest. Should not exceed 132 characters."
+  },
   "description2":{
     "message":"Ekstensi Chrome paling populer, dengan lebih dari 40 juta pengguna! Blokir iklan di seluruh web.",
     "description":"Extension description in manifest. Should not exceed 132 characters."
@@ -31,10 +35,6 @@
     "message":"Pengaturan AdBlock",
     "description":"Title for the options page"
   },
-  "chromebutton_how_to_hide2":{
-    "message":"Untuk menyembunyikan tombolnya, klik kanan dan pilih Sembunyikan tombol. Anda dapat memunculkannya lagi di chrome:\/\/chrome\/extensions.",
-    "description":"Message explaining how to hide the AdBlock toolbar button. 'Hide Button' should match the text that Chrome displays when you right click a toolbar button."
-  },
   "operabutton_how_to_hide2":{
     "message":"Untuk menyembunyikan tombol, pergi ke opera:\/\/extensions dan centang opsi 'Hide from toolbar'. Anda dapat menampilkannya lagi dengan tidak mencentang opsi tersebut.",
     "description":"Message explaining how to hide the AdBlock toolbar button. 'Hide Button' should match the text that Opera displays on the Extensions page."
@@ -42,10 +42,6 @@
   "safaributton_how_to_hide2":{
     "message":"Untuk menyembunyikan tombol, klik kanan toolbar Safari dan pilih Customize Toolbar, kemudian tarik tombol AdBlock dari toolbar. Anda dapat menampilkannya lagi dengan menariknya kembali ke toolbar.",
     "description":"Message explaining how to hide the AdBlock toolbar button. 'Customize Toolbar' should match the text that Safari displays in the toolbar's context menu."
-  },
-  "ff_button_how_to_hide":{
-    "message":"Untuk menyembunyikan tombol, klik kanan dan pilih Hapus dari Toolbar.  Anda dapat menunjukkan ini lagi di bawah menu Firefox-> Customize.",
-    "description":"Message explaining how to hide the AdBlock toolbar button. 'Remove from Toolbar' should match the text that Firefox displays when you right click a toolbar button, and 'Customize' should match the text that shows when you click the button on the Firefox toolbar with three lines."
   },
   "sliderexplanation":{
     "message":"Geser pengatur hingga iklan terblokir dengan benar pada halaman, dan elemen yang terblokir tidak terlihat.",
@@ -357,26 +353,6 @@
   },
   "filterantisocial":{
     "message":"Daftar Antisocial filter (hapus tombol social media)",
-    "description":"Name of the filter list"
-  },
-  "filterannoyances":{
-    "message":"Fanboy's Annoyances (hapus gangguan di web)",
-    "description":"Name of the filter list"
-  },
-  "filterwarning_removal":{
-    "message":"AdBlock Warning Removal List (menghapus pesan tentang penggunaan AdBlock)",
-    "description":"Name of the filter list"
-  },
-  "filteracceptable_ads":{
-    "message":"Iklan yang dapat diterima",
-    "description":"A filter list"
-  },
-  "filteradblock_custom":{
-    "message":"filter AdBlock yang diinginkan",
-    "description":"A filter list"
-  },
-  "filtereasylist":{
-    "message":"EasyList",
     "description":"A filter list"
   },
   "filterrussian":{
@@ -385,7 +361,7 @@
   },
   "filterczech":{
     "message":"Ceko dan Slowakia",
-    "description":"Language names for a filter list"
+    "description":"A filter list"
   },
   "filtereasyprivacy":{
     "message":"EasyPrivacy (perlindungan privasi)",
@@ -567,10 +543,6 @@
     "message":"Nonaktifkan semua ekstensi kecuali AdBlock:",
     "description":"Instruction on ad report page"
   },
-  "disableforchromestepone":{
-    "message":"Buka <a href='#'>halaman ekstensi<\/a>",
-    "description":"Step 1 for disabling Chrome extensions"
-  },
   "clickdisableotherextensions":{
     "message":"<b>ATAU<\/b>, cukup klik tombol ini untuk kita untuk melakukan semua hal di atas: <a>Nonaktifkan semua ekstensi lainnya<\/a>",
     "description":"On the ad report page, an alternative way to disable other extensions"
@@ -613,103 +585,199 @@
   },
   "lang_english":{
     "message":"Inggris",
-    "description":"language"
-  },
-  "filtereasylist_plus_bulgarian":{
-    "message":"Bulgaria",
-    "description":"language"
-  },
-  "filterchinese":{
-    "message":"China",
-    "description":"language"
+    "description":"Language name"
   },
   "lang_czech":{
     "message":"Ceko",
-    "description":"language"
+    "description":"Language name"
   },
-  "filterdanish":{
-    "message":"Denmark",
-    "description":"language"
-  },
-  "filterdutch":{
-    "message":"Belanda",
-    "description":"language"
-  },
-  "filtereasylist_plus_finnish":{
-    "message":"Finlandia",
-    "description":"language"
-  },
-  "filtereasylist_plus_french":{
-    "message":"Prancis",
-    "description":"language"
-  },
-  "filtereasylist_plus_german":{
-    "message":"Jerman",
-    "description":"language"
-  },
-  "filtereasylist_plus_greek":{
-    "message":"Bahasa Yunani",
-    "description":"language"
-  },
-  "filterhungarian":{
-    "message":"Hungaria",
-    "description":"language"
-  },
-  "filterisraeli":{
-    "message":"Ibrani",
-    "description":"language"
-  },
-  "filteritalian":{
-    "message":"Italia",
-    "description":"language"
-  },
-  "filterjapanese":{
-    "message":"Jepang",
-    "description":"language"
-  },
-  "filtereasylist_plun_korean":{
-    "message":"Korea",
-    "description":"language"
-  },
-  "filtereasylist_plus_polish":{
-    "message":"Polandia",
-    "description":"language"
-  },
-  "filtereasylist_plus_romanian":{
-    "message":"Romania",
-    "description":"language"
+  "lang_spanish":{
+    "message":"Spanyol",
+    "description":"Language name"
   },
   "lang_russian":{
     "message":"Rusia",
-    "description":"language"
+    "description":"Language name"
   },
   "lang_slovak":{
     "message":"Bahasa Slowakia",
-    "description":"language"
-  },
-  "filtereasylist_plus_spanish":{
-    "message":"Spanyol",
-    "description":"language"
+    "description":"Language name"
   },
   "lang_ukranian":{
     "message":"Ukrania",
-    "description":"language"
+    "description":"Language name"
+  },
+  "lang_arabic":{
+    "message":"Bahasa Arab",
+    "description":"Language name"
+  },
+  "lang_bulgarian":{
+    "message":"Bulgaria",
+    "description":"Language name"
+  },
+  "lang_chinese":{
+    "message":"China",
+    "description":"Language name"
+  },
+  "lang_danish":{
+    "message":"Denmark",
+    "description":"Language name"
+  },
+  "lang_dutch":{
+    "message":"Belanda",
+    "description":"Language name"
+  },
+  "lang_estonian":{
+    "message":"Bahasa Estonia",
+    "description":"Language name"
+  },
+  "lang_finnish":{
+    "message":"Finlandia",
+    "description":"Language name"
+  },
+  "lang_french":{
+    "message":"Prancis",
+    "description":"Language name"
+  },
+  "lang_german":{
+    "message":"Jerman",
+    "description":"Language name"
+  },
+  "lang_greek":{
+    "message":"Bahasa Yunani",
+    "description":"Language name"
+  },
+  "lang_hungarian":{
+    "message":"Hungaria",
+    "description":"Language name"
+  },
+  "lang_indonesian":{
+    "message":"Indonesia",
+    "description":"Language name"
+  },
+  "lang_icelandic":{
+    "message":"Bahasa Islandia",
+    "description":"Language name"
+  },
+  "lang_israeli":{
+    "message":"Ibrani",
+    "description":"Language name"
+  },
+  "lang_italian":{
+    "message":"Italia",
+    "description":"Language name"
+  },
+  "lang_japanese":{
+    "message":"Jepang",
+    "description":"Language name"
+  },
+  "lang_korean":{
+    "message":"Korea",
+    "description":"Language name"
+  },
+  "lang_lithuania":{
+    "message":"Bahasa Lithuania",
+    "description":"Language name"
+  },
+  "lang_polish":{
+    "message":"Polandia",
+    "description":"Language name"
+  },
+  "lang_romanian":{
+    "message":"Romania",
+    "description":"Language name"
+  },
+  "lang_latvian":{
+    "message":"Latvia",
+    "description":"Language name"
+  },
+  "lang_swedish":{
+    "message":"Swedia",
+    "description":"Language name"
+  },
+  "lang_turkish":{
+    "message":"Turki",
+    "description":"Language name"
+  },
+  "filtereasylist_plus_bulgarian":{
+    "message":"Bulgaria",
+    "description":"A filter list"
+  },
+  "filterchinese":{
+    "message":"China",
+    "description":"A filter list"
+  },
+  "filterdanish":{
+    "message":"Denmark",
+    "description":"A filter list"
+  },
+  "filterdutch":{
+    "message":"Belanda",
+    "description":"A filter list"
+  },
+  "filtereasylist_plus_finnish":{
+    "message":"Finlandia",
+    "description":"A filter list"
+  },
+  "filtereasylist_plus_french":{
+    "message":"Prancis",
+    "description":"A filter list"
+  },
+  "filtereasylist_plus_german":{
+    "message":"Jerman",
+    "description":"A filter list"
+  },
+  "filtereasylist_plus_greek":{
+    "message":"Bahasa Yunani",
+    "description":"A filter list"
+  },
+  "filterhungarian":{
+    "message":"Hungaria",
+    "description":"A filter list"
+  },
+  "filterisraeli":{
+    "message":"Ibrani",
+    "description":"A filter list"
+  },
+  "filteritalian":{
+    "message":"Italia",
+    "description":"A filter list"
+  },
+  "filterjapanese":{
+    "message":"Jepang",
+    "description":"A filter list"
+  },
+  "filtereasylist_plun_korean":{
+    "message":"Korea",
+    "description":"A filter list"
+  },
+  "filtereasylist_plus_polish":{
+    "message":"Polandia",
+    "description":"A filter list"
+  },
+  "filtereasylist_plus_romanian":{
+    "message":"Romania",
+    "description":"A filter list"
+  },
+  "filtereasylist_plus_spanish":{
+    "message":"Spanyol",
+    "description":"A filter list"
   },
   "filtereasylist_plus_arabic":{
     "message":"Bahasa Arab",
-    "description":"language"
+    "description":"A filter list"
   },
   "filtereasylist_plus_estonian":{
     "message":"Bahasa Estonia",
-    "description":"language"
+    "description":"A filter list"
   },
   "filtericelandic":{
     "message":"Bahasa Islandia",
-    "description":"language"
+    "description":"A filter list"
   },
   "filtereasylist_plus_lithuania":{
     "message":"Bahasa Lithuania",
-    "description":"language"
+    "description":"A filter list"
   },
   "other":{
     "message":"Yang lain",
@@ -785,30 +853,6 @@
     "message":"Apakah iklannya muncul juga pada browser itu?",
     "description":"Instruction for how to check Firefox\/Chrome for a reported ad"
   },
-  "ff_checkinchrometitle":{
-    "message":"Periksa di Chrome",
-    "description":"Tell a user to see if a reported ad also appears in Chrome"
-  },
-  "ff_checkinchrome_1":{
-    "message":"Pasang Chrome, jika Anda tidak memilikinya.",
-    "description":"Instruction for how to check Chrome for a reported ad"
-  },
-  "ff_checkinchrome_2":{
-    "message":"Pasang AdBlock untuk Chrome, jika Anda tidak memilikinya.",
-    "description":"Instruction for how to check Chrome for a reported ad"
-  },
-  "ff_checkinchrome_3":{
-    "message":"Di Chrome, berlangganan ke daftar filter yang sama seperti yang Anda miliki di sini.",
-    "description":"Instruction for how to check Chrome for a reported ad"
-  },
-  "ff_checkinchrome_4":{
-    "message":"Di Chrome, muat halaman dengan iklan.",
-    "description":"Instruction for how to check Chrome for a reported ad"
-  },
-  "ff_checkinchrome_5":{
-    "message":"Apakah iklan muncul di Chrome juga?",
-    "description":"Instruction for how to check Chrome for a reported ad"
-  },
   "refusetocheck":{
     "message":"Saya tidak ingin memeriksa hal ini",
     "description":"User is telling us they don't wish to investigate something for us"
@@ -822,10 +866,6 @@
         "example":"EXAMPLE 1: <a href='mailto:someguy@list.com'>John Doe<\/a>  EXAMPLE 2: <a href='http:\/\/easylist.org'>EasyList forums<\/a>"
       }
     }
-  },
-  "reporttous2":{
-    "message":"Jika anda dapat berbahasa Inggris, anda dapat melaporkan sebuah iklan kepada kami <a>in the issue tracker<\/a>.",
-    "description":"NOTE: non-English translations should replace the first sentence and instead say 'If you can speak English, you can report the ad to us <a>in the issue tracker<\/a>.'"
   },
   "fixityourself":{
     "message":"OK, anda tetap bisa memblokir iklan ini untuk anda sendiri pada halaman pengaturan, Terima kasih!",
@@ -922,10 +962,6 @@
   "disabled_by_filter_lists":{
     "message":"Maaf, AdBlock dimatikan pada halaman ini oleh salah satu daftar filter anda.",
     "description":"Message shown when a user tries to unwhitelist a web page that has been whitelisted by a rule in a subscribed filter list"
-  },
-  "status_disabled":{
-    "message":"AdBlock tidak dapat berjalan pada domain ini.",
-    "description":"Message shown in toolbar button on web pages that disallow extensions, such as the Extensions Gallery or about:blank"
   },
   "dont_run_on_pages_on_domain":{
     "message":"Jangan jalankan pada halaman-halaman di domain ini",
@@ -1093,10 +1129,6 @@
       }
     }
   },
-  "dropboxerrorforfilters":{
-    "message":"Anda telah melebihi batas ukuran Dropbox. Harap menghapus beberapa entri dari filter buatan Anda atau yang nonaktif, dan coba lagi.",
-    "description":"Message to Dropbox sync users on the Customize tab, custom filters \/ disabled."
-  },
   "languagedropdowndescription":{
     "message":"Tambahkan filter untuk bahasa lain: ",
     "description":"Dropdown list for language-specific filters"
@@ -1108,10 +1140,6 @@
   "selectlanguage":{
     "message":" --Pilih bahasa-- ",
     "description":"Text for the first option in Langage Dropdown for Filter Lists tab in options. Include the ' -- ' on either side of your translation."
-  },
-  "allow_whitelisting_youtube_channels":{
-    "message":"Izinkan daftar putih pada saluran Youtube tertentu",
-    "description":"Checkbox on the 'General' tab of the Options page"
   },
   "whitelist_youtube_channel":{
     "message":"Daftar putih saluran $name$",
@@ -1154,10 +1182,6 @@
         "example":"<a>here<\/a>"
       }
     }
-  },
-  "ff_adblock_outdated":{
-    "message":"Anda menggunakan versi lama dari AdBlock. Silahkan klik tombol menu Firefox dan pilih Pengaya. Kemudian pada halaman Pengaya, klik ikon gigi (alat untuk semua add-on), dan pilih 'Cek Versi Baru'.",
-    "description":"On the Options > Support page, shows when there is an update available for AdBlock. 'Add-ons', 'Tools for all add-ons' and 'Check for Updates' should match the strings displayed by Firefox."
   },
   "adblocksupport":{
     "message":"Dukungan AdBlock",
@@ -1211,10 +1235,6 @@
     "message":"Tim kami meminta beberapa informasi debug? Klik <a href='#' id='debug'> di sini<\/a> untuk itu!",
     "description":"Users can click this link to provide debug information to AdBlock staff"
   },
-  "bugreport":{
-    "message":"Mengapa tidak Anda mengirimkan kami <a>laporan bugnya<\/a>?",
-    "description":"Link to send a bug report on the Support tab of the options"
-  },
   "supportsite":{
     "message":"Beritahukan kami di <a>situs dukungan<\/a> ini!",
     "description":"Link to the support site on the Support tab of the options"
@@ -1223,16 +1243,20 @@
     "message":"Jika Anda melihat iklan, jangan membuat laporan bug, melainkan buatlah <a>laporan iklan<\/a>!",
     "description":"Link to the ad report page on our support site. This is found on the Support tab of the options."
   },
-  "acceptableadsdisable_done":{
-    "message":"Iklan yang dapat diterima telah dinonaktifkan.",
-    "description":"Message shown to users after disabling Acceptable Ads via update page."
+  "headertype":{
+    "message":"Tipe",
+    "description":"Resource list page: title of a column"
   },
-  "acceptableadsdisable_how_to_reenable":{
-    "message":"Anda dapat mengaktifkan kembali ini setiap saat dengan mengklik kotak centang \"Izinkan beberapa iklan yang tidak mengganggu\" di bawah ini.",
-    "description":"Message shown to users after disabling Acceptable Ads via update page."
+  "typesub_frame":{
+    "message":"frame",
+    "description":"A resource type"
   },
-  "acceptableadsdisable_please_reenable":{
-    "message":"Aktifkan iklan yang dapat diterima adalah cara untuk mendukung situs-situs yang Anda cintai yang berjanji hanya menampilkan iklan yang berselera tinggi dan tidak mengganggu.",
-    "description":"Message shown to users after disabling Acceptable Ads via update page."
+  "typemain_frame":{
+    "message":"halaman",
+    "description":"A resource type"
+  },
+  "buttonsubmit":{
+    "message":"Masukkan",
+    "description":"Button to send a form."
   }
 }
