--- a/_locales/ro/messages.json
+++ b/_locales/ro/messages.json
@@ -1,4 +1,8 @@
 {
+  "description":{
+    "message":"Cea mai populară extensie pentru Chrome, cu peste 40 de milioane de utilizatori! Blochează orice reclamă pe web.",
+    "description":"Extension description in manifest. Should not exceed 132 characters."
+  },
   "description2":{
     "message":"Cea mai populară extensie pentru Chrome, cu peste 40 de milioane de utilizatori! Blochează orice reclamă pe web.",
     "description":"Extension description in manifest. Should not exceed 132 characters."
@@ -31,10 +35,6 @@
     "message":"Opțiuni AdBlock",
     "description":"Title for the options page"
   },
-  "chromebutton_how_to_hide2":{
-    "message":"Pentru a ascunde butonul, click dreapta, iar apoi alege 'Ascundeți butonul'. Pentru a-l arăta trebuie să accesați managerul de extensii.",
-    "description":"Message explaining how to hide the AdBlock toolbar button. 'Hide Button' should match the text that Chrome displays when you right click a toolbar button."
-  },
   "operabutton_how_to_hide2":{
     "message":"Pentru a ascunde butonul, du-te la opera:\/\/extensions şi bifează opţiunea  'Hide from toolbar'. Poate fi afișat din nou prin debifarea acestei opţiuni.",
     "description":"Message explaining how to hide the AdBlock toolbar button. 'Hide Button' should match the text that Opera displays on the Extensions page."
@@ -42,10 +42,6 @@
   "safaributton_how_to_hide2":{
     "message":"Pentru a ascunde butonul, faceţi clic dreapta pe bara de instrumente din Safari şi alegeţi Customize Toolbar, apoi glisaţi butonul AdBlock afară din bara de instrumente. Îl puteţi afișa din nou trăgându-l înapoi în bara de instrumente.",
     "description":"Message explaining how to hide the AdBlock toolbar button. 'Customize Toolbar' should match the text that Safari displays in the toolbar's context menu."
-  },
-  "ff_button_how_to_hide":{
-    "message":"Pentru a ascunde butonul, faceţi click dreapta pe el si alegeţi Remove din Toolbar. Îl puteţi afişa din nou din meniul Firefox -> Customize.",
-    "description":"Message explaining how to hide the AdBlock toolbar button. 'Remove from Toolbar' should match the text that Firefox displays when you right click a toolbar button, and 'Customize' should match the text that shows when you click the button on the Firefox toolbar with three lines."
   },
   "sliderexplanation":{
     "message":"Glisează cursorul până când reclama este blocată corect și arată bine.",
@@ -357,22 +353,6 @@
   },
   "filterantisocial":{
     "message":"Filtru rețele sociale (elimină butoanele sociale)",
-    "description":"Name of the filter list"
-  },
-  "filterannoyances":{
-    "message":"Fanboy's Annoyances (înlătură deranjurile pe Web)",
-    "description":"Name of the filter list"
-  },
-  "filterwarning_removal":{
-    "message":"Lista AdBlock Warning Removal (elimină mesajele despre utilizarea AdBlock)",
-    "description":"Name of the filter list"
-  },
-  "filteradblock_custom":{
-    "message":"Filtre AdBlock personalizate",
-    "description":"A filter list"
-  },
-  "filtereasylist":{
-    "message":"EasyList",
     "description":"A filter list"
   },
   "filterrussian":{
@@ -381,7 +361,7 @@
   },
   "filterczech":{
     "message":"Cehă și Slovacă",
-    "description":"Language names for a filter list"
+    "description":"A filter list"
   },
   "filtereasyprivacy":{
     "message":"EasyPrivacy (protecție a vieții private)",
@@ -523,10 +503,6 @@
     "message":"Nu",
     "description":"A negative response to a question"
   },
-  "disableforchromestepone":{
-    "message":"Deschide <a href='#'>managerul de extensii<\/a>",
-    "description":"Step 1 for disabling Chrome extensions"
-  },
   "clickdisableotherextensions":{
     "message":"<b>Sau<\/b>, doar faceţi click pe acest buton pentru ca noi să facem toate cele de mai sus: <a>Dezactivaţi toate celelalte extensii<\/a>",
     "description":"On the ad report page, an alternative way to disable other extensions"
@@ -553,87 +529,167 @@
   },
   "lang_english":{
     "message":"Engleză",
-    "description":"language"
-  },
-  "filtereasylist_plus_bulgarian":{
-    "message":"Bulgară",
-    "description":"language"
-  },
-  "filterchinese":{
-    "message":"Chineză",
-    "description":"language"
+    "description":"Language name"
   },
   "lang_czech":{
     "message":"Cehă",
-    "description":"language"
+    "description":"Language name"
   },
-  "filterdanish":{
-    "message":"Daneză",
-    "description":"language"
-  },
-  "filterdutch":{
-    "message":"Olandeză",
-    "description":"language"
-  },
-  "filtereasylist_plus_finnish":{
-    "message":"Finlandeză",
-    "description":"language"
-  },
-  "filtereasylist_plus_french":{
-    "message":"Franceză",
-    "description":"language"
-  },
-  "filtereasylist_plus_german":{
-    "message":"Germană",
-    "description":"language"
-  },
-  "filtereasylist_plus_greek":{
-    "message":"Greacă",
-    "description":"language"
-  },
-  "filterhungarian":{
-    "message":"Maghiară",
-    "description":"language"
-  },
-  "filterisraeli":{
-    "message":"Ebraică",
-    "description":"language"
-  },
-  "filteritalian":{
-    "message":"Italiană",
-    "description":"language"
-  },
-  "filterjapanese":{
-    "message":"Japoneză",
-    "description":"language"
-  },
-  "filtereasylist_plun_korean":{
-    "message":"Coreeană",
-    "description":"language"
-  },
-  "filtereasylist_plus_polish":{
-    "message":"Poloneză",
-    "description":"language"
-  },
-  "filtereasylist_plus_romanian":{
-    "message":"Română",
-    "description":"language"
+  "lang_spanish":{
+    "message":"Spaniolă",
+    "description":"Language name"
   },
   "lang_russian":{
     "message":"Rusă",
-    "description":"language"
+    "description":"Language name"
   },
   "lang_slovak":{
     "message":"Slovacă",
-    "description":"language"
-  },
-  "filtereasylist_plus_spanish":{
-    "message":"Spaniolă",
-    "description":"language"
+    "description":"Language name"
   },
   "lang_ukranian":{
     "message":"Ucraineană",
-    "description":"language"
+    "description":"Language name"
+  },
+  "lang_bulgarian":{
+    "message":"Bulgară",
+    "description":"Language name"
+  },
+  "lang_chinese":{
+    "message":"Chineză",
+    "description":"Language name"
+  },
+  "lang_danish":{
+    "message":"Daneză",
+    "description":"Language name"
+  },
+  "lang_dutch":{
+    "message":"Olandeză",
+    "description":"Language name"
+  },
+  "lang_finnish":{
+    "message":"Finlandeză",
+    "description":"Language name"
+  },
+  "lang_french":{
+    "message":"Franceză",
+    "description":"Language name"
+  },
+  "lang_german":{
+    "message":"Germană",
+    "description":"Language name"
+  },
+  "lang_greek":{
+    "message":"Greacă",
+    "description":"Language name"
+  },
+  "lang_hungarian":{
+    "message":"Maghiară",
+    "description":"Language name"
+  },
+  "lang_indonesian":{
+    "message":"Indoneziană",
+    "description":"Language name"
+  },
+  "lang_israeli":{
+    "message":"Ebraică",
+    "description":"Language name"
+  },
+  "lang_italian":{
+    "message":"Italiană",
+    "description":"Language name"
+  },
+  "lang_japanese":{
+    "message":"Japoneză",
+    "description":"Language name"
+  },
+  "lang_korean":{
+    "message":"Coreeană",
+    "description":"Language name"
+  },
+  "lang_polish":{
+    "message":"Poloneză",
+    "description":"Language name"
+  },
+  "lang_romanian":{
+    "message":"Română",
+    "description":"Language name"
+  },
+  "lang_latvian":{
+    "message":"Letonă",
+    "description":"Language name"
+  },
+  "lang_swedish":{
+    "message":"Suedeză",
+    "description":"Language name"
+  },
+  "lang_turkish":{
+    "message":"Turcă",
+    "description":"Language name"
+  },
+  "filtereasylist_plus_bulgarian":{
+    "message":"Bulgară",
+    "description":"A filter list"
+  },
+  "filterchinese":{
+    "message":"Chineză",
+    "description":"A filter list"
+  },
+  "filterdanish":{
+    "message":"Daneză",
+    "description":"A filter list"
+  },
+  "filterdutch":{
+    "message":"Olandeză",
+    "description":"A filter list"
+  },
+  "filtereasylist_plus_finnish":{
+    "message":"Finlandeză",
+    "description":"A filter list"
+  },
+  "filtereasylist_plus_french":{
+    "message":"Franceză",
+    "description":"A filter list"
+  },
+  "filtereasylist_plus_german":{
+    "message":"Germană",
+    "description":"A filter list"
+  },
+  "filtereasylist_plus_greek":{
+    "message":"Greacă",
+    "description":"A filter list"
+  },
+  "filterhungarian":{
+    "message":"Maghiară",
+    "description":"A filter list"
+  },
+  "filterisraeli":{
+    "message":"Ebraică",
+    "description":"A filter list"
+  },
+  "filteritalian":{
+    "message":"Italiană",
+    "description":"A filter list"
+  },
+  "filterjapanese":{
+    "message":"Japoneză",
+    "description":"A filter list"
+  },
+  "filtereasylist_plun_korean":{
+    "message":"Coreeană",
+    "description":"A filter list"
+  },
+  "filtereasylist_plus_polish":{
+    "message":"Poloneză",
+    "description":"A filter list"
+  },
+  "filtereasylist_plus_romanian":{
+    "message":"Română",
+    "description":"A filter list"
+  },
+  "filtereasylist_plus_spanish":{
+    "message":"Spaniolă",
+    "description":"A filter list"
   },
   "other":{
     "message":"Alte",
@@ -699,30 +755,6 @@
     "message":"Reclama apare şi în celălalt browser?",
     "description":"Instruction for how to check Firefox\/Chrome for a reported ad"
   },
-  "ff_checkinchrometitle":{
-    "message":"Verifică în Chrome",
-    "description":"Tell a user to see if a reported ad also appears in Chrome"
-  },
-  "ff_checkinchrome_1":{
-    "message":"Instalează Chrome dacă nu-l ai.",
-    "description":"Instruction for how to check Chrome for a reported ad"
-  },
-  "ff_checkinchrome_2":{
-    "message":"Instalaţi AdBlock pentru Chrome, dacă nu îl aveţi.",
-    "description":"Instruction for how to check Chrome for a reported ad"
-  },
-  "ff_checkinchrome_3":{
-    "message":"În Chrome, abonaţi-vă la aceleaşi liste de filtrare ca aici.",
-    "description":"Instruction for how to check Chrome for a reported ad"
-  },
-  "ff_checkinchrome_4":{
-    "message":"În Chrome, incărcaţi pagina cu reclama.",
-    "description":"Instruction for how to check Chrome for a reported ad"
-  },
-  "ff_checkinchrome_5":{
-    "message":"Reclama apare şi în Chrome?",
-    "description":"Instruction for how to check Chrome for a reported ad"
-  },
   "refusetocheck":{
     "message":"Nu doresc să încerc asta",
     "description":"User is telling us they don't wish to investigate something for us"
@@ -736,10 +768,6 @@
         "example":"EXAMPLE 1: <a href='mailto:someguy@list.com'>John Doe<\/a>  EXAMPLE 2: <a href='http:\/\/easylist.org'>EasyList forums<\/a>"
       }
     }
-  },
-  "reporttous2":{
-    "message":"If you can speak English, you can report the ad to us <a>in the issue tracker<\/a>.",
-    "description":"NOTE: non-English translations should replace the first sentence and instead say 'If you can speak English, you can report the ad to us <a>in the issue tracker<\/a>.'"
   },
   "fixityourself":{
     "message":"Poți bloca această reclamă pentru tine în Opțiuni. Mulțumesc!",
@@ -836,10 +864,6 @@
   "disabled_by_filter_lists":{
     "message":"Scuze, AdBlock este dezactivat pe această pagină din cauza unui filtru.",
     "description":"Message shown when a user tries to unwhitelist a web page that has been whitelisted by a rule in a subscribed filter list"
-  },
-  "status_disabled":{
-    "message":"AdBlock nu poate rula pe acest domeniu.",
-    "description":"Message shown in toolbar button on web pages that disallow extensions, such as the Extensions Gallery or about:blank"
   },
   "dont_run_on_pages_on_domain":{
     "message":"Nu rula pe paginiile din acest domeniu",
@@ -1003,10 +1027,6 @@
       }
     }
   },
-  "dropboxerrorforfilters":{
-    "message":"Ai depăşit limita de spaţiu Dropbox. Te rugăm îndepărtează câteva intrări din filtrele proprii sau cele dezactivate şi încearcă din nou.",
-    "description":"Message to Dropbox sync users on the Customize tab, custom filters \/ disabled."
-  },
   "languagedropdowndescription":{
     "message":"Adaugă filtru pentru altă limbă: ",
     "description":"Dropdown list for language-specific filters"
@@ -1018,10 +1038,6 @@
   "selectlanguage":{
     "message":"-- Alege Limba --",
     "description":"Text for the first option in Langage Dropdown for Filter Lists tab in options. Include the ' -- ' on either side of your translation."
-  },
-  "allow_whitelisting_youtube_channels":{
-    "message":"Permite whitelisting pentru canale Youtube specifice",
-    "description":"Checkbox on the 'General' tab of the Options page"
   },
   "whitelist_youtube_channel":{
     "message":"Trece pe lista albă canalul $name$",
@@ -1064,10 +1080,6 @@
         "example":"<a>here<\/a>"
       }
     }
-  },
-  "ff_adblock_outdated":{
-    "message":"Utilizaţi o versiune veche de AdBlock. Vă rugăm să faceţi clic pe butonul Firefox Meniu şi selectaţi Suplimente. Apoi in pagina de suplimente, faceţi clic pe pictograma roţii dinţate (instrumente pentru suplimente) şi alegeţi 'Verifică actualizari'.",
-    "description":"On the Options > Support page, shows when there is an update available for AdBlock. 'Add-ons', 'Tools for all add-ons' and 'Check for Updates' should match the strings displayed by Firefox."
   },
   "adblocksupport":{
     "message":"Suport AdBlock",
@@ -1121,10 +1133,6 @@
     "message":"Echipa noastră a solicitat unele informaţii de depanare? Faceţi clic <a href='#' id='debug'> aici<\/a> pentru asta!",
     "description":"Users can click this link to provide debug information to AdBlock staff"
   },
-  "bugreport":{
-    "message":"De ce nu ne trimiteţi un <a> raport de problemă<\/a>?",
-    "description":"Link to send a bug report on the Support tab of the options"
-  },
   "supportsite":{
     "message":"Aduceţi-ne la cunoştinţă pe <a>siteul de suport<\/a>!",
     "description":"Link to the support site on the Support tab of the options"
@@ -1132,5 +1140,21 @@
   "ad_report_please":{
     "message":"Dacă vedeţi un anunţ, nu faceţi un raport de problemă, faceţi un <a>raport de reclamă<\/a>!",
     "description":"Link to the ad report page on our support site. This is found on the Support tab of the options."
+  },
+  "headertype":{
+    "message":"Tip",
+    "description":"Resource list page: title of a column"
+  },
+  "typesub_frame":{
+    "message":"frame",
+    "description":"A resource type"
+  },
+  "typemain_frame":{
+    "message":"pagină",
+    "description":"A resource type"
+  },
+  "buttonsubmit":{
+    "message":"Submit",
+    "description":"Button to send a form."
   }
 }
